@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+August 12, 2011
++ [antonin] added cmake support to openjpip
+
 August 11, 2011
 * [mickael] Fixed issue #76
 * [antonin] minor bug fix in configure.ac (credit to Vincent Torri)
